[package]
name = "rtlicious-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rtlicious = {path = "../../"}
simple_logger = "4.3.3"
log = "0.4.21"


[features]
default = []
trace   = ["rtlicious/trace"]
